prog/1stPartyLibs/quirrel/quirrel/testData/diagnostics/binding_assign.diag.txt
ERROR: can't assign to binding 'a' (probably declaring using 'local' was intended, but 'let' was used)
testData/diagnostics/binding_assign.nut:2:0

let a = 2
a = 3
^


